--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -169,7 +169,7 @@ footer{
 .footer-column{
     width: 50%;
 }
-.contact input[type="text"], .contact[type="email"], textarea{
+.contact input[type="text"], .contact input[type="email"], textarea{
     display: block;
     margin-bottom: 25px;
     padding: 18px 35px;
@@ -177,6 +177,6 @@ footer{
     border-radius: 5px;
     background: #fff;
     border: 0;
-    width: 50%;
+    width: 100%;
 
 }
